k8s/deployment.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: slush
  namespace: dolittle-campaigns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: slush
    spec:
      containers:
      - name: slush
        image: dolittle/campaigns:slush
        imagePullPolicy: Always
        ports:
        - containerPort: 80
