k8s/service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: slush
    namespace: dolittle-campaigns
    labels:
      app: slush
  spec:
    ports:
    - port: 80
      targetPort: 80
      name: slush-port
      protocol: TCP
    selector:
      app: slush
