k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: slush
  namespace: dolittle-campaigns
spec:
  rules:
  - host: slush.dolittle.com
    http:
      paths:
      - path: /
        backend:
          serviceName: slush
          servicePort: 80
